# manyfa

./: CMakeLists.txt  README.md
include/: thread_safe_faidx.hpp
src/: fasta_reader.cpp  manyfa.cpp  manyfasta.cpp
test_data/: generate_test_data.sh  run_tests.sh
